refactor: installation and territory configuration: - Removed `InstallationConfigMockData` and replaced mocks with file-based configuration for installation data. - Added JPA repositories and models for `TerritoryLevel1`, `TerritoryLevel2`, and `TerritoryLevel3`. - Updated `TerritoryService` to query real data from the database. - Introduced `InstallationConfigProperties` for external configuration file loading. - Enhanced and fixed tests for the updated data flow.