@@ -1,7 +1,11 @@
 package br.car.dsp.controller;
 
+import br.car.dsp.dto.HierarchyLevelConfigResponse;
+import br.car.dsp.dto.HomeKpisConfigResponse;
 import br.car.dsp.dto.InstallationConfigResponse;
-import br.car.dsp.mock.InstallationConfigMockData;
+import br.car.dsp.dto.KpiCardConfigResponse;
+import br.car.dsp.dto.ScreenConfigResponse;
+import br.car.dsp.dto.ScreensConfigResponse;
 import br.car.dsp.service.InstallationConfigService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,6 +22,8 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 class ConfigControllerTest {
 
+	private static final String PRIMARY_KPI_CODE = "REGISTERED_AREA";
+
 	@Mock
 	private InstallationConfigService installationConfigService;
 
@@ -26,7 +32,42 @@ class ConfigControllerTest {
 
 	@Test
 	void getInstallationConfig_ShouldDelegateToService() {
-		InstallationConfigResponse expected = InstallationConfigMockData.get();
+		InstallationConfigResponse expected = new InstallationConfigResponse(
+				List.of(new HierarchyLevelConfigResponse("level1", "Level 1", "Select level 1", 1)),
+				new ScreensConfigResponse(
+						new ScreenConfigResponse(
+								"Browse registered data",
+								List.of("level2", "level3"),
+								null,
+								null,
+								null,
+								null,
+								null
+						),
+						new ScreenConfigResponse(
+								"Download public data",
+								List.of("level1", "level2", "level3"),
+								null,
+								null,
+								null,
+								null,
+								null
+						)
+				),
+				new HomeKpisConfigResponse(
+						5,
+						PRIMARY_KPI_CODE,
+						List.of(new KpiCardConfigResponse(
+								PRIMARY_KPI_CODE,
+								"Registered properties",
+								"un.",
+								"ha",
+								"#CED6E5",
+								1,
+								true
+						))
+				)
+		);
 		when(installationConfigService.getInstallationConfig()).thenReturn(expected);
 
 		InstallationConfigResponse result = configController.getInstallationConfig();
@@ -35,8 +76,8 @@ class ConfigControllerTest {
 		assertEquals(List.of("level2", "level3"), result.screens().home().hierarchyKeys());
 		assertEquals(List.of("level1", "level2", "level3"), result.screens().downloads().hierarchyKeys());
 		assertEquals(5, result.kpis().maxCards());
-		assertEquals(InstallationConfigMockData.PRIMARY_KPI_CODE, result.kpis().primaryCode());
-		assertEquals(InstallationConfigMockData.PRIMARY_KPI_CODE, result.kpis().cards().get(0).code());
+		assertEquals(PRIMARY_KPI_CODE, result.kpis().primaryCode());
+		assertEquals(PRIMARY_KPI_CODE, result.kpis().cards().getFirst().code());
 		verify(installationConfigService).getInstallationConfig();
 	}
 }
